# firefox-session-ui-egui

./: .gitignore  Cargo.toml  README.md  build.rs  firefox-session-ui-egui.js  index.html
.github/workflows/: pages.yml  release.yml  rust.yml
assets/: sw.js
src/: app.rs  background.rs  clipboard.rs  egui_utils.rs  host.rs  lib.rs  main.rs
