[package]
name = "firefox-session-ui-egui"
version = "0.1.0"
edition = "2021"
authors = ["Lej77 <31554212+Lej77@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[features]
default = ["real_data"]

# Disable this feature to see fake data for faster compile times:
real_data = [
    "dep:firefox_session_data",
    "dep:tokio",
    "dep:serde_json",
]

# Support more html to PDF converters (increases binary size):
html_to_pdf_all = ["firefox_session_data?/html_to_pdf_all"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.31.0"
egui_extras = "0.31.0"
eframe = { version = "0.31.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"

serde = { version = "1", features = ["derive"] } # You only need serde if you want app persistence:


rfd = "0.15.0" # File prompts
either = "1.11.0" # Used in public API of firefox_session_data
serde_json = { version = "1.0.116", optional = true } # Used to parse session data into the type exported by firefox_session_data
firefox_session_data = { git = "http://github.com/Lej77/firefox_session_data.git", tag = "v0.1.0", optional = true, features = ["windows-gui"] }
raw-window-handle = "0.6.2" # Used to set parent for file prompts (freezes parent window while they are open)

# Native:
[target.'cfg(not(target_family = "wasm"))'.dependencies]
env_logger = "0.11"
tokio = { version = "1.37.0", features = ["rt-multi-thread"], optional = true }
arboard = "3.4.0" # Clipboard access

# web:
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = [
    "HtmlCollection",
    "HtmlSelectElement",
    "HtmlOptionElement",
    "Url",
    "Blob",
    "HtmlAnchorElement",
] } # to access the DOM (among other things to hide the loading text)
js-sys = "0.3"

# Windows:
[build-dependencies]
# Pinned since v0.1.21 is broken, see https://github.com/BenjaminRi/winresource/issues/27
winresource = "=0.1.20" # Executable icon on Windows


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
